--- a/config/ppo/Beach.yaml
+++ b/config/ppo/Beach.yaml
@@ -12,7 +12,7 @@ behaviors:
             learning_rate_schedule: linear
         network_settings:
             normalize: true
-            hidden_units: 512s
+            hidden_units: 512
             num_layers: 3           #   def 2
             use_recurrent: true     #   mem
             sequence_length: 256    #   mem 512
