--- a/config/ppo/Beach.yaml
+++ b/config/ppo/Beach.yaml
@@ -11,7 +11,7 @@ behaviors:
             num_epoch: 3
             learning_rate_schedule: linear
         network_settings:
-            normalize: true
+            normalize: true         #   observations
             hidden_units: 512
             num_layers: 3           #   def 2
             use_recurrent: true     #   mem
